# text2location

./: Arch.md  Cargo.toml  build.rs
src/: address_index.rs  areas.csv  csv_loader.rs  main.rs
